--- a/index.html
+++ b/index.html
@@ -47,12 +47,61 @@
       </tbody>
     </table>
   </div>
+  
+      <!-- UPDATE MODAL -->
+
+    <div class="modal fade" id="recipeModal" tabindex="-1" role="dialog" aria-labelledby="recipeModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="recipeModal">Update recipe</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <form id = "updateForm">
+          <div class="modal-body">
+            
+              <div class="form-group">
+                <label for="recipeName" class="col-form-label">Name:</label>
+                <input type="text" name = "name" class="form-control" id="name">
+              </div>
+              <div class="form-group">
+                <label for="recipeCalories" class="col-form-label">Calories:</label>
+                <textarea class="form-control" name = "calories" id="calories" ></textarea>
+              </div>
+              <div class="form-group">
+                <label for="recipePrepTime" class="col-form-label">Prepation Time:</label>
+                <textarea class="form-control" name = "prepTime" id="prepTime"></textarea>
+              </div>
+              <div class="form-group">
+                <label for="recipeServingSize" class="col-form-label">Serving Size:</label>
+                <textarea class="form-control"name = "servingSize" id="servingSize"></textarea>
+              </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="submit" id = updateButton >Update</button>
+          </div>
+        </form>
+        </div>
+      </div>
+    </div>
 
 
 
  
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+  integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+  crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+  crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+  crossorigin="anonymous"></script>
   <script src="index.js"></script>
 </body>
 
